--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node": "^22.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
