--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@google/genai": "^1.16.0",
+    "@google/genai": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.18.1",
     "openai": "^5.19.1",
     "socket.io": "^4.8.1"
   },
